gitignore update and added json manipulation

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,105 @@
 testers.ipynb
 tweet_scrape.py
 time_series.ipynb
+data.json
+data_range_0.json
+data_range_1.json
+data_range_2.json
+data_range_3.json
+data_range_4.json
+data_range_5.json
+data_range_6.json
+data_range_7.json
+data_range_8.json
+data_range_9.json
+data_range_10.json
+data_range_11.json
+data_range_12.json
+data_range_13.json
+data_range_14.json
+data_range_15.json
+data_range_16.json
+data_range_17.json
+data_range_18.json
+data_range_19.json
+data_range_20.json
+data_range_21.json
+data_range_22.json
+data_range_23.json
+data_range_24.json
+data_range_25.json
+data_range_26.json
+data_range_27.json
+data_range_28.json
+data_range_29.json
+data_range_30.json
+data_range_31.json
+data_range_32.json
+data_range_33.json
+data_range_34.json
+data_range_35.json
+data_range_36.json
+data_range_37.json
+data_range_38.json
+data_range_39.json
+data_range_40.json
+data_range_41.json
+data_range_42.json
+data_range_43.json
+data_range_44.json
+data_range_45.json
+data_range_46.json
+data_range_47.json
+data_range_48.json
+data_range_49.json
+data_range_50.json
+data_range_51.json
+data_range_52.json
+data_range_53.json
+data_range_54.json
+data_range_55.json
+data_range_56.json
+data_range_57.json
+data_range_58.json
+data_range_59.json
+data_range_60.json
+data_range_61.json
+data_range_62.json
+data_range_63.json
+data_range_64.json
+data_range_65.json
+data_range_66.json
+data_range_67.json
+data_range_68.json
+data_range_69.json
+data_range_70.json
+data_range_71.json
+data_range_72.json
+data_range_73.json
+data_range_74.json
+data_range_75.json
+data_range_76.json
+data_range_77.json
+data_range_78.json
+data_range_79.json
+data_range_80.json
+data_range_81.json
+data_range_82.json
+data_range_83.json
+data_range_84.json
+data_range_85.json
+data_range_86.json
+data_range_87.json
+data_range_88.json
+data_range_89.json
+data_range_90.json
+data_range_91.json
+data_range_92.json
+data_range_93.json
+data_range_94.json
+data_range_95.json
+data_range_96.json
+data_range_97.json
+data_range_98.json
+data_range_99.json
+data_range_100.json
