--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ data_range_51.json
 data_range_52.json
 data_range_53.json
 data_range_54.json
+bearer_token
 data_range_55.json
 data_range_56.json
 data_range_57.json
