--- a/.gitignore
+++ b/.gitignore
@@ -472,3 +472,10 @@ replies_to_361.json
 replies_to_362.json
 replies_to_363.json
 replies_to_364.json
+most_105_retweeted_ids_good.json
+most_1100_appearing_tweet_ids.json
+most_1100_retweeted_ids_good.json
+most_110_appearing_user_ids.json
+replies_to_100_most_appearing_users_good.json
+replies_to_100_most_retweeted_users_good.json
+replies_to_metarobox.json
