--- a/.gitignore
+++ b/.gitignore
@@ -471,6 +471,7 @@ replies_to_360.json
 replies_to_361.json
 replies_to_362.json
 replies_to_363.json
+cryptoAirdropTrends.csv
 replies_to_364.json
 most_105_retweeted_ids_good.json
 most_1100_appearing_tweet_ids.json
